0223 modu XOR code(2) & update readme

--- a/3. 모두를 위한 딥러닝 시즌2/Lab09 - XOR(2).ipynb
+++ b/3. 모두를 위한 딥러닝 시즌2/Lab09 - XOR(2).ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Lab09 - XOR. Logistic Regression - Eager Execution\n",
-    " * XOR문제를 Logistic Regression을 통해 풀어보도록 하겠습니다."
+    " * XOR문제를 Neural Network를 통해 풀어보도록 하겠습니다."
    ]
   },
   {
