--- a/3. 모두를 위한 딥러닝 시즌2/Lab09 - XOR(3).ipynb
+++ b/3. 모두를 위한 딥러닝 시즌2/Lab09 - XOR(3).ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Lab09 - XOR. Logistic Regression - Eager Execution\n",
-    " * XOR문제를 Logistic Regression을 통해 풀어보도록 하겠습니다."
+    " * XOR문제를 Deep Neural Network을 통해 풀어보도록 하겠습니다."
    ]
   },
   {
@@ -20,8 +20,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-23T08:40:30.716901Z",
-     "start_time": "2021-02-23T08:40:12.786438Z"
+     "end_time": "2021-02-23T17:35:04.197637Z",
+     "start_time": "2021-02-23T17:34:50.617121Z"
     }
    },
    "outputs": [
@@ -60,8 +60,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-23T08:40:31.400842Z",
-     "start_time": "2021-02-23T08:40:30.720895Z"
+     "end_time": "2021-02-23T17:35:04.528240Z",
+     "start_time": "2021-02-23T17:35:04.200628Z"
     }
    },
    "outputs": [
@@ -124,8 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-23T17:36:35.553712Z",
+     "start_time": "2021-02-23T17:36:35.517809Z"
+    }
+   },
    "outputs": [],
    "source": [
     "dataset = tf.data.Dataset.from_tensor_slices((x_data,y_data)).batch(len(x_data))\n",
@@ -136,7 +141,165 @@
     "        super(wide_deep_nn,self).__init__()\n",
     "        \n",
     "        self.W1 = tf.Variable(tf.random.normal((2,nb_classes)),name='weight1')\n",
-    "        "
+    "        self.b1 = tf.Variable(tf.random.normal((nb_classes,)),name='bias1')\n",
+    "        \n",
+    "        self.W2 = tf.Variable(tf.random.normal((nb_classes,nb_classes)),name='weight2')\n",
+    "        self.b2 = tf.Variable(tf.random.normal((nb_classes,)),name='bias2')\n",
+    "        \n",
+    "        self.W3 = tf.Variable(tf.random.normal((nb_classes,nb_classes)),name='weight3')\n",
+    "        self.b3 = tf.Variable(tf.random.normal((nb_classes,)),name='bias3')\n",
+    "        \n",
+    "        self.W4 = tf.Variable(tf.random.normal((nb_classes,1)),name='weight4')\n",
+    "        self.b4 = tf.Variable(tf.random.normal((1,)),name='bias4')\n",
+    "        \n",
+    "        self.variables = [self.W1,self.b1,self.W2,self.b2,self.W3,self.b3,self.W4,self.b4]\n",
+    "    \n",
+    "    def preprocess_data(self,features,labels):\n",
+    "        features = tf.cast(features,tf.float32)\n",
+    "        labels = tf.cast(labels,tf.float32)\n",
+    "        return features, labels\n",
+    "    \n",
+    "    def deep_nn(self,features):\n",
+    "        layer1 = tf.sigmoid(tf.matmul(features,self.W1) + self.b1)\n",
+    "        layer2 = tf.sigmoid(tf.matmul(layer1,self.W2) + self.b2)\n",
+    "        layer3 = tf.sigmoid(tf.matmul(layer2,self.W3) + self.b3)\n",
+    "        hypothesis = tf.sigmoid(tf.matmul(layer3,self.W4) + self.b4)\n",
+    "        return hypothesis\n",
+    "    \n",
+    "    def loss_fn(self,hypothesis,features,labels):\n",
+    "        cost = -tf.reduce_mean(labels * tf.math.log(hypothesis) + (1-labels) * tf.math.log(1 - hypothesis))\n",
+    "        return cost\n",
+    "    \n",
+    "    def accuracy_fn(self,hypothesis,labels):\n",
+    "        predicted = tf.cast(hypothesis > 0.5,dtype=tf.float32)\n",
+    "        accuracy = tf.reduce_mean(tf.cast(tf.equal(predicted,labels),dtype=tf.float32))\n",
+    "        return accuracy\n",
+    "    \n",
+    "    def grad(self,hypothesis,features,labels):\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            loss_value = self.loss_fn(self.deep_nn(features),features,labels)\n",
+    "        return tape.gradient(loss_value,self.variables)\n",
+    "    \n",
+    "    def fit(self,dataset,epochs=20000,verbose=500):\n",
+    "        optimizer = tf.keras.optimizers.SGD(learning_rate=0.01)\n",
+    "        for step in range(epochs):\n",
+    "            for features, labels in dataset:\n",
+    "                features, labels = self.preprocess_data(features,labels)\n",
+    "                grads = self.grad(self.deep_nn(features),features,labels)\n",
+    "                optimizer.apply_gradients(grads_and_vars=zip(grads,self.variables))\n",
+    "                if step % verbose == 0:\n",
+    "                    print('iter: {}, Loss: {:.4f}'.format(step,self.loss_fn(self.deep_nn(features),features,labels)))\n",
+    "    \n",
+    "    def test_model(self,x_data,y_data):\n",
+    "        x_data, y_data = self.preprocess_data(x_data,y_data)\n",
+    "        test_acc = self.accuracy_fn(self.deep_nn(x_data),y_data)\n",
+    "        print(\"Testset Accuracy: {:.4f}\".format(test_acc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Deep Neural Network를 통해 XOR해결\n",
+    "\n",
+    " * 위의 Data를 4Layer의 Neural Network를 통해 학습시킨 후 모델을 생성합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-23T17:36:38.171968Z",
+     "start_time": "2021-02-23T17:36:38.147018Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model = wide_deep_nn(nb_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-23T17:39:18.870598Z",
+     "start_time": "2021-02-23T17:36:43.785109Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter: 0, Loss: 0.7544\n",
+      "iter: 500, Loss: 0.6839\n",
+      "iter: 1000, Loss: 0.6745\n",
+      "iter: 1500, Loss: 0.6621\n",
+      "iter: 2000, Loss: 0.6474\n",
+      "iter: 2500, Loss: 0.6311\n",
+      "iter: 3000, Loss: 0.6120\n",
+      "iter: 3500, Loss: 0.5883\n",
+      "iter: 4000, Loss: 0.5588\n",
+      "iter: 4500, Loss: 0.5223\n",
+      "iter: 5000, Loss: 0.4782\n",
+      "iter: 5500, Loss: 0.4274\n",
+      "iter: 6000, Loss: 0.3724\n",
+      "iter: 6500, Loss: 0.3170\n",
+      "iter: 7000, Loss: 0.2652\n",
+      "iter: 7500, Loss: 0.2197\n",
+      "iter: 8000, Loss: 0.1817\n",
+      "iter: 8500, Loss: 0.1509\n",
+      "iter: 9000, Loss: 0.1263\n",
+      "iter: 9500, Loss: 0.1068\n",
+      "iter: 10000, Loss: 0.0914\n",
+      "iter: 10500, Loss: 0.0790\n",
+      "iter: 11000, Loss: 0.0691\n",
+      "iter: 11500, Loss: 0.0609\n",
+      "iter: 12000, Loss: 0.0542\n",
+      "iter: 12500, Loss: 0.0486\n",
+      "iter: 13000, Loss: 0.0439\n",
+      "iter: 13500, Loss: 0.0400\n",
+      "iter: 14000, Loss: 0.0366\n",
+      "iter: 14500, Loss: 0.0336\n",
+      "iter: 15000, Loss: 0.0311\n",
+      "iter: 15500, Loss: 0.0288\n",
+      "iter: 16000, Loss: 0.0268\n",
+      "iter: 16500, Loss: 0.0251\n",
+      "iter: 17000, Loss: 0.0235\n",
+      "iter: 17500, Loss: 0.0221\n",
+      "iter: 18000, Loss: 0.0209\n",
+      "iter: 18500, Loss: 0.0197\n",
+      "iter: 19000, Loss: 0.0187\n",
+      "iter: 19500, Loss: 0.0178\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-23T17:39:48.103221Z",
+     "start_time": "2021-02-23T17:39:48.081279Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testset Accuracy: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.test_model(x_data, y_data)"
    ]
   }
  ],
